ml_ops/42/k8s/virtual_service.yml
# Istio
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: predict-server
spec:
  hosts:
    - predict-server
  http:
    - route:
        # 推論サーバーA
        - destination:
            host: predict-server
            subset: predict-pod-subset-a      # DestinationRule 定義ファイルの spec.subsets.name タグで定義した値
          weight: 50                          # 50% をサーバーA からのレスポンスにする
        # 推論サーバーB
        - destination:
            host: predict-server
            subset: predict-pod-subset-b      # DestinationRule 定義ファイルの spec.subsets.name タグで定義した値
          weight: 50                          # 50% をサーバーB からのレスポンスにする
